tests/compile-fail/expected_literal.stderr
error: expected literal: string
 --> tests/compile-fail/expected_literal.rs:6:25
  |
6 | #[enum_tools(MIN(name = 6))]
  |                         ^
